customdata layers are not merging taken the names into consideration #36786

Closed
opened 2013-09-20 17:37:03 +02:00 by Dalai Felinto · 5 comments

%%%To see the bug, open the join.blend and Ctrl+J.

The new mesh did not merge the content of the red and blue layers correctly.
(it took the red from one and merged into the blue of the other).

Bug originally reported n the "Blender Gamedev Request" list under the topic "Join UV maps by name"
Thanks for Bastien Montagne and Brecht van Lommel for helping with the review.

Fix provided by uv.svn.diff
@brecht, it's good to go? or better to bounce to Campbel as well?%%%

%%%To see the bug, open the join.blend and Ctrl+J. The new mesh did not merge the content of the red and blue layers correctly. (it took the red from one and merged into the blue of the other). Bug originally reported n the "Blender Gamedev Request" list under the topic "Join UV maps by name" Thanks for Bastien Montagne and Brecht van Lommel for helping with the review. Fix provided by uv.svn.diff @brecht, it's good to go? or better to bounce to Campbel as well?%%%
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

%%%updating patch with considerations from Bastien (mainly cleanup)%%%

%%%updating patch with considerations from Bastien (mainly cleanup)%%%

%%%LGTM, can be committed.%%%

%%%LGTM, can be committed.%%%
Author
Owner

%%%committing on r60288. Thanks for reporting. You're welcome.%%%

%%%committing on r60288. Thanks for reporting. You're welcome.%%%
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36786
No description provided.