bugfix: [#36786] customdata layers are not merging taken the names into consideration (which is also "[#36749] Joining objects with more than one uv map depends on list order")

Thanks Bastien Montagne and Brecht van Lommel for reviewing and some advice.